# searxng-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
nix/: package.nix
nix/nixos-module/: searxng-mcp.nix
src/: browse.rs  config.rs  main.rs  searxng.rs
