[package]
name = "searxng-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
html2md = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "brotli", "gzip", "deflate"] }
rmcp = { version = "0.14", features = ["macros", "server", "transport-async-rw", "transport-streamable-http-server", "transport-io", "schemars", "elicitation"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
